[gd_scene load_steps=31 format=3 uid="uid://b7wt1gpod4rjo"]

[ext_resource type="Script" path="res://Screens/Battle/Battle_TurnEval.gd" id="1_qf6je"]
[ext_resource type="FontFile" uid="uid://betryss44sx0q" path="res://Screens/sylfaen.ttf" id="2_rqdb6"]
[ext_resource type="Texture2D" uid="uid://dbkeyxh50sked" path="res://Screens/Overworld/Portraits/Maia.png" id="3_x8nlg"]
[ext_resource type="Texture2D" uid="uid://c0hgaxsb44gfb" path="res://Screens/Battle/hp_full.png" id="4_61cap"]
[ext_resource type="Texture2D" uid="uid://cc4r8g2175acd" path="res://Screens/Battle/hp_empty.png" id="5_ltcn2"]
[ext_resource type="Theme" uid="uid://wlic4ks3f85i" path="res://Screens/Battle/theme.tres" id="6_h2n6j"]
[ext_resource type="Texture2D" uid="uid://33ts5p2mx0ql" path="res://Screens/Battle/sprites/Fire2.png" id="7_066qq"]

[sub_resource type="LabelSettings" id="LabelSettings_8vpv4"]
font = ExtResource("2_rqdb6")
font_size = 20
font_color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[sub_resource type="InputEventKey" id="InputEventKey_dqmi4"]
device = -1
keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_ei2dd"]
events = [SubResource("InputEventKey_dqmi4")]

[sub_resource type="InputEventKey" id="InputEventKey_4ao6f"]
keycode = 69

[sub_resource type="Shortcut" id="Shortcut_j08fw"]
events = [SubResource("InputEventKey_4ao6f")]

[sub_resource type="InputEventKey" id="InputEventKey_4apw1"]
device = -1
keycode = 4194305

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_p1kbt"]
button_mask = 2
position = Vector2(308, 19)
global_position = Vector2(312, 62)
button_index = 2
pressed = true

[sub_resource type="Shortcut" id="Shortcut_w7bme"]
events = [SubResource("InputEventKey_4apw1"), SubResource("InputEventMouseButton_p1kbt")]

[sub_resource type="AtlasTexture" id="AtlasTexture_yxo64"]
atlas = ExtResource("7_066qq")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu3je"]
atlas = ExtResource("7_066qq")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_scqe4"]
atlas = ExtResource("7_066qq")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w78rl"]
atlas = ExtResource("7_066qq")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct87q"]
atlas = ExtResource("7_066qq")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx4vd"]
atlas = ExtResource("7_066qq")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov5f7"]
atlas = ExtResource("7_066qq")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i564b"]
atlas = ExtResource("7_066qq")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftog0"]
atlas = ExtResource("7_066qq")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbwm4"]
atlas = ExtResource("7_066qq")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlqwc"]
atlas = ExtResource("7_066qq")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qgvj"]
atlas = ExtResource("7_066qq")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d7hp"]
atlas = ExtResource("7_066qq")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnuru"]
atlas = ExtResource("7_066qq")
region = Rect2(576, 384, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_jxvgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxo64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scqe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w78rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct87q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov5f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i564b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftog0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbwm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlqwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qgvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d7hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnuru")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[node name="TurnEval" type="Node2D"]
script = ExtResource("1_qf6je")

[node name="Drivers" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Name" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 101.0
offset_top = 764.0
offset_right = 273.0
offset_bottom = 790.0

[node name="ColorRect2" type="ColorRect" parent="UI/Name"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.839216, 0.784314, 1)

[node name="Label" type="Label" parent="UI/Name"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -12.0
offset_right = 52.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "LYSANDRA"
label_settings = SubResource("LabelSettings_8vpv4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackName" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 52.0
offset_right = 140.0
offset_bottom = 78.0
grow_horizontal = 2

[node name="ColorRect2" type="ColorRect" parent="UI/AttackName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.839216, 0.784314, 1)

[node name="Label" type="Label" parent="UI/AttackName"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -12.0
offset_right = 52.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "LYSANDRA"
label_settings = SubResource("LabelSettings_8vpv4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 101.0
offset_top = 808.0
offset_right = 273.0
offset_bottom = 980.0

[node name="ColorRect2" type="ColorRect" parent="UI/Portrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.839216, 0.784314, 1)

[node name="Control" type="Control" parent="UI/Portrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Portrait/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_x8nlg")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Portrait"]
layout_mode = 1
offset_left = 8.0
offset_top = 31.0
offset_right = 33.0
offset_bottom = 141.0

[node name="TextureRect" type="TextureRect" parent="UI/Portrait/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
texture = ExtResource("4_61cap")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="UI/Portrait/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
texture = ExtResource("4_61cap")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="UI/Portrait/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
texture = ExtResource("5_ltcn2")
expand_mode = 3

[node name="AttackButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(130, 130)
offset_left = 290.0
offset_top = 829.0
offset_right = 420.0
offset_bottom = 959.0
focus_mode = 0
theme = ExtResource("6_h2n6j")
shortcut = SubResource("Shortcut_ei2dd")
text = "Attack
[q]"

[node name="SpecialButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(130, 130)
offset_left = 429.0
offset_top = 829.0
offset_right = 559.0
offset_bottom = 959.0
focus_mode = 0
theme = ExtResource("6_h2n6j")
shortcut = SubResource("Shortcut_j08fw")
text = "Special
[e]"

[node name="UndoButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(0, 48)
offset_left = 1684.0
offset_top = 815.0
offset_right = 1844.0
offset_bottom = 865.0
focus_mode = 0
theme = ExtResource("6_h2n6j")
shortcut = SubResource("Shortcut_w7bme")
text = "Undo Move"

[node name="EndTurnButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(0, 48)
offset_left = 1617.0
offset_top = 881.0
offset_right = 1844.0
offset_bottom = 952.0
focus_mode = 0
theme = ExtResource("6_h2n6j")
text = "End Turn
"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jxvgy")

[connection signal="pressed" from="UI/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="UI/SpecialButton" to="." method="_on_special_button_pressed"]
[connection signal="pressed" from="UI/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="UI/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
